--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/NewPrivateKeyDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/NewPrivateKeyDialog.form
@@ -152,7 +152,7 @@
               </component>
             </children>
           </grid>
-          <grid id="cdbbb" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="cdbbb" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Advanced"/>
@@ -168,7 +168,7 @@
               </component>
               <vspacer id="7fe75">
                 <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
               <component id="b63a8" class="javax.swing.JLabel">
@@ -178,6 +178,14 @@
                 <properties>
                   <labelFor value="bd735"/>
                   <text value="&amp;Signature hash:"/>
+                </properties>
+              </component>
+              <component id="b58f1" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Key Usage:"/>
                 </properties>
               </component>
             </children>
