--- a/modules/gateway/assertions/templates/ivy.xml
+++ b/modules/gateway/assertions/templates/ivy.xml
@@ -23,6 +23,7 @@
         <dependency name="layer7-utility" rev="latest.integration" conf="optional"/>
         <dependency name="layer7-common" rev="latest.integration" conf="optional; test->default,test"/>
         <dependency name="layer7-policy" rev="latest.integration" conf="optional; test->default,test"/>
+        <dependency name="layer7-policy-exporter" rev="latest.integration" conf="optional"/>
         <dependency name="layer7-gui" rev="latest.integration" conf="optional"/>
         <dependency name="layer7-gateway-common" rev="latest.integration" conf="optional"/>
         <dependency name="layer7-gateway-server" rev="latest.integration"
