--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/SecurePasswordPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/SecurePasswordPropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="48" y="54" width="752" height="585"/>
+      <xy x="48" y="54" width="835" height="585"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -54,7 +54,9 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <enabled value="true"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="9a816" class="javax.swing.JLabel">
@@ -62,7 +64,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <labelFor value="ea7cf"/>
+              <labelFor value="48df1"/>
               <text value="&amp;Name:"/>
             </properties>
           </component>
@@ -79,7 +81,7 @@
               <text value="Date of last change:"/>
             </properties>
           </component>
-          <component id="ea7cf" class="javax.swing.JTextField" binding="nameField">
+          <component id="48df1" class="com.l7tech.gui.widgets.SquigglyTextField" binding="nameField">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -194,6 +196,7 @@
                   <component id="83d6e" class="javax.swing.JTextArea" binding="pemPrivateKeyField">
                     <constraints/>
                     <properties>
+                      <lineWrap value="true"/>
                       <text value=""/>
                     </properties>
                   </component>
