--- a/modules/gateway/assertions/SamlpAssertion/src/main/java/com/l7tech/external/assertions/samlpassertion/console/resources/SamlpResponseBuilderPropertiesDialog.form
+++ b/modules/gateway/assertions/SamlpAssertion/src/main/java/com/l7tech/external/assertions/samlpassertion/console/resources/SamlpResponseBuilderPropertiesDialog.form
@@ -243,9 +243,7 @@
                     <children>
                       <tabbedpane id="65458" binding="responseAttributesTabbedPane">
                         <constraints>
-                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                            <preferred-size width="200" height="200"/>
-                          </grid>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties/>
                         <border type="none"/>
@@ -265,7 +263,7 @@
                                   </grid>
                                 </constraints>
                                 <properties>
-                                  <text resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SamlpResponseBuilderPropertiesDialog" key="resposneAttributes.Id"/>
+                                  <text resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SamlpResponseBuilderPropertiesDialog" key="responseAttributes.Id"/>
                                 </properties>
                               </component>
                               <component id="219ec" class="javax.swing.JTextField" binding="idTextField">
@@ -355,7 +353,7 @@
                               </component>
                             </children>
                           </grid>
-                          <grid id="2fcc3" binding="saml1_1Panel" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                          <grid id="2fcc3" binding="saml1_1Panel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                             <margin top="0" left="0" bottom="0" right="0"/>
                             <constraints>
                               <tabbedpane title="1.1 Title Not Used"/>
@@ -439,11 +437,6 @@
                                 </constraints>
                                 <properties/>
                               </component>
-                              <vspacer id="27137">
-                                <constraints>
-                                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                                </constraints>
-                              </vspacer>
                             </children>
                           </grid>
                         </children>
