--- a/modules/gateway/assertions/JDBCQueryAssertion/src/main/java/com/l7tech/external/assertions/jdbcquery/console/resources/JdbcQueryAssertionPropertiesDialog.form
+++ b/modules/gateway/assertions/JDBCQueryAssertion/src/main/java/com/l7tech/external/assertions/jdbcquery/console/resources/JdbcQueryAssertionPropertiesDialog.form
@@ -210,14 +210,6 @@
                       </vspacer>
                     </children>
                   </grid>
-                  <component id="35505" class="javax.swing.JLabel">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text resource-bundle="com/l7tech/external/assertions/jdbcquery/console/resources/JdbcQueryAssertionPropertiesDialog" key="label.query.warning.message"/>
-                    </properties>
-                  </component>
                   <scrollpane id="96c4">
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -242,6 +234,37 @@
                       </component>
                     </children>
                   </scrollpane>
+                  <grid id="e9735" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="35505" class="javax.swing.JLabel">
+                        <constraints>
+                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text resource-bundle="com/l7tech/external/assertions/jdbcquery/console/resources/JdbcQueryAssertionPropertiesDialog" key="label.query.warning.message"/>
+                        </properties>
+                      </component>
+                      <component id="8bf7e" class="javax.swing.JCheckBox" binding="allowMutiValuedVariablesCheckBox">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="Allow Muti-Valued Context Variables"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </grid>
+                  <hspacer id="599ac">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </hspacer>
                 </children>
               </grid>
             </children>
