--- a/modules/gateway/console/src/main/java/com/l7tech/console/auditalerts/AuditAlertsDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/auditalerts/AuditAlertsDialog.form
@@ -34,7 +34,7 @@
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="ignore"/>
+                  <text resource-bundle="com/l7tech/console/auditalerts/AuditAlertsDialog" key="ignoreAuditsButton.label"/>
                 </properties>
               </component>
               <component id="9454b" class="javax.swing.JButton" binding="viewAuditsButton">
@@ -42,7 +42,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="view"/>
+                  <text resource-bundle="com/l7tech/console/auditalerts/AuditAlertsDialog" key="viewAuditsButton.label"/>
                 </properties>
               </component>
               <component id="e7465" class="javax.swing.JButton" binding="viewOptionsButton">
@@ -50,7 +50,7 @@
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="configure"/>
+                  <text resource-bundle="com/l7tech/console/auditalerts/AuditAlertsDialog" key="viewOptionsButton.label"/>
                 </properties>
               </component>
             </children>
@@ -70,7 +70,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="There are audit alerts waiting"/>
+              <text resource-bundle="com/l7tech/console/auditalerts/AuditAlertsDialog" key="message"/>
             </properties>
           </component>
           <hspacer id="b6148">
