--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ServiceResolutionPanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ServiceResolutionPanel.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="523" height="197"/>
+      <xy x="20" y="20" width="525" height="205"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -14,8 +14,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="etched" title="Choose Service Resolution Path:">
-        </border>
+        <border type="etched" title="Choose Service Resolution Path:"/>
         <children>
           <component id="4bafb" class="javax.swing.JRadioButton" binding="noURIRadio">
             <constraints>
@@ -26,7 +25,7 @@
               <text value="&amp;No resolution path"/>
             </properties>
           </component>
-          <grid id="7261d" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="7261d" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -42,13 +41,16 @@
                   <text value="Custom &amp;resolution path"/>
                 </properties>
               </component>
-              <component id="f75fd" class="javax.swing.JTextField" binding="uriField">
+              <component id="597d5" class="javax.swing.JComboBox" binding="customUri">
                 <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <minimum-size width="100" height="-1"/>
+                    <preferred-size width="200" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <editable value="true"/>
+                </properties>
               </component>
             </children>
           </grid>
@@ -85,7 +87,7 @@
                   <focusable value="true"/>
                   <opaque value="false"/>
                   <requestFocusEnabled value="true"/>
-                  <text value="&lt;html&gt;&#10;  &lt;head&gt;&#10;    &#10;  &lt;/head&gt;&#10;  &lt;body&gt;&#10;  &lt;/body&gt;&#10;&lt;/html&gt;&#10;"/>
+                  <text value="&lt;html&gt;&#10;  &lt;head&gt;&#10;&#10;  &lt;/head&gt;&#10;  &lt;body&gt;&#10;    &lt;p style=&quot;margin-top: 0&quot;&gt;&#10;      &#10;    &lt;/p&gt;&#10;  &lt;/body&gt;&#10;&lt;/html&gt;&#10;"/>
                   <verifyInputWhenFocusTarget value="false"/>
                 </properties>
               </component>
