ug FR-434: Implemented ability for HTTP routing assertions to designate a subset of the trusted certificates to trust as possible server certs for outbound TLS from that routing assertion.   Per func spec at http://sarek.l7tech.com/mediawiki/index.php?title=HTTP_Routing_Designate_Server_Certs
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31060 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/HttpRoutingAssertionDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/HttpRoutingAssertionDialog.form
@@ -385,7 +385,7 @@
                   </component>
                 </children>
               </grid>
-              <grid id="d5e06" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="d5e06" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -403,7 +403,7 @@
                   </component>
                   <hspacer id="47888">
                     <constraints>
-                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </hspacer>
                   <component id="41a2f" class="javax.swing.JLabel">
@@ -423,6 +423,14 @@
                       </grid>
                     </constraints>
                     <properties/>
+                  </component>
+                  <component id="39787" class="javax.swing.JButton" binding="trustedServerCertsButton" default-binding="true">
+                    <constraints>
+                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Trusted Server Certs"/>
+                    </properties>
                   </component>
                 </children>
               </grid>
