SSM-3779: The regex dialog no longer allows you to insert a literal tab character into the pattern field.  Instead the tab character will move focus to the next component.   The regex dialog now warns if the pattern contains leading or trailing whitespace.  The warning is of the form of a light green squiggly line under the pattern which, when hovered over, shows the tooltip "Note: pattern contains leading or trailing whitespace".
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31155 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/RegexDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/RegexDialog.form
@@ -68,6 +68,7 @@
                         </constraints>
                         <properties>
                           <text value="&amp;Match and Replace (always proceed)"/>
+                          <toolTipText value="If the pattern matches, replace the match with the replacement expression, then proceed to process the message"/>
                         </properties>
                       </component>
                       <component id="ba0e2" class="javax.swing.JLabel">
