bug 11441: Added support for using a certificate from a context variable for signature verification with Non-SOAP Verify Element.  The cert variable can be either a PEM String or an X509Certificate instance.
  Moved the guts of the Non-SOAP Verify Element assertion, including GUI panel, into core utility classes for future reuse by SAML functionality, as was done for Non-SOAP Encrypt Element.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31242 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/XmlSecurityAssertion/src/main/java/com/l7tech/external/assertions/xmlsec/console/NonSoapVerifyElementAssertionPropertiesDialog.form
+++ b/modules/gateway/assertions/XmlSecurityAssertion/src/main/java/com/l7tech/external/assertions/xmlsec/console/NonSoapVerifyElementAssertionPropertiesDialog.form
@@ -3,233 +3,18 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="0" bottom="10" right="0"/>
     <constraints>
-      <xy x="48" y="54" width="498" height="411"/>
+      <xy x="48" y="54" width="61" height="44"/>
     </constraints>
     <properties/>
     <border type="none"/>
-    <children>
-      <grid id="18ab3" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none" title="Select certificate used to verify the signature(s):"/>
-        <children>
-          <component id="5f5e9" class="javax.swing.JRadioButton" binding="certSelectRadioButton">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Use &amp;selected certificate for signature validation"/>
-            </properties>
-          </component>
-          <grid id="37fa0" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
-            <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="320" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="c391" class="javax.swing.JTextField" binding="selectedCertificateNameTextField">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <editable value="false"/>
-                </properties>
-              </component>
-              <component id="7ca2e" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text resource-bundle="com/l7tech/console/panels/WsSecurityPropertiesDialog" key="certName.label"/>
-                </properties>
-              </component>
-              <component id="60eaa" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text resource-bundle="com/l7tech/console/panels/WsSecurityPropertiesDialog" key="certSubject.label"/>
-                </properties>
-              </component>
-              <component id="b9f87" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text resource-bundle="com/l7tech/console/panels/WsSecurityPropertiesDialog" key="certIssuer.label"/>
-                </properties>
-              </component>
-              <component id="5df46" class="javax.swing.JTextField" binding="selectedCertificateSubjectTextField">
-                <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <editable value="false"/>
-                </properties>
-              </component>
-              <component id="c8e2e" class="javax.swing.JTextField" binding="selectedCertificateIssuerTextField">
-                <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <editable value="false"/>
-                </properties>
-              </component>
-              <component id="5fce0" class="javax.swing.JButton" binding="selectButton" default-binding="true">
-                <constraints>
-                  <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text resource-bundle="com/l7tech/console/panels/WsSecurityPropertiesDialog" key="button.select"/>
-                </properties>
-              </component>
-              <hspacer id="a8b04">
-                <constraints>
-                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </hspacer>
-            </children>
-          </grid>
-          <hspacer id="2fa57">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                <minimum-size width="30" height="-1"/>
-                <preferred-size width="30" height="-1"/>
-                <maximum-size width="30" height="-1"/>
-              </grid>
-            </constraints>
-          </hspacer>
-          <component id="51328" class="javax.swing.JCheckBox" binding="keyInfoOverrideCheckBox">
-            <constraints>
-              <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Always &amp;override KeyInfo in signature element with selected certificate"/>
-            </properties>
-          </component>
-          <vspacer id="3c3b">
-            <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-                <minimum-size width="-1" height="10"/>
-                <preferred-size width="-1" height="10"/>
-                <maximum-size width="-1" height="10"/>
-              </grid>
-            </constraints>
-          </vspacer>
-          <component id="11ab2" class="javax.swing.JRadioButton" binding="certExpectKeyInfoRadioButton">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <selected value="true"/>
-              <text value="Expect &amp;KeyInfo in signature element (default)"/>
-            </properties>
-          </component>
-          <grid id="a581a" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
-            <constraints>
-              <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="99ef3" class="javax.swing.JRadioButton" binding="certLookupRadioButton">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <selected value="false"/>
-                  <text value="&amp;Lookup certificate by name"/>
-                </properties>
-              </component>
-              <component id="f229a" class="javax.swing.JTextField" binding="lookupCertificateTextField">
-                <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties/>
-              </component>
-            </children>
-          </grid>
-          <component id="63780" class="javax.swing.JCheckBox" binding="customIdAttrCheckBox">
-            <constraints>
-              <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Recognize only the following &amp;ID attributes:"/>
-            </properties>
-          </component>
-          <grid id="2bedd" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
-            <constraints>
-              <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <scrollpane id="f3844">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties/>
-                <border type="none"/>
-                <children>
-                  <component id="f3b07" class="javax.swing.JList" binding="customIdAttrList">
-                    <constraints/>
-                    <properties>
-                      <selectionMode value="0"/>
-                    </properties>
-                  </component>
-                </children>
-              </scrollpane>
-              <grid id="39be3" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties/>
-                <border type="none"/>
-                <children>
-                  <component id="70882" class="javax.swing.JButton" binding="addIdAttrButton">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text value="&amp;Add"/>
-                    </properties>
-                  </component>
-                  <vspacer id="5654d">
-                    <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                  </vspacer>
-                  <component id="cc933" class="javax.swing.JButton" binding="removeIdAttrButton">
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text value="&amp;Remove"/>
-                    </properties>
-                  </component>
-                </children>
-              </grid>
-            </children>
-          </grid>
-        </children>
-      </grid>
-    </children>
+    <children/>
   </grid>
   <buttonGroups>
-    <group name="certSelectButtonGroup">
+    <group name="buttonGroup1">
       <member id="5f5e9"/>
-      <member id="99ef3"/>
       <member id="11ab2"/>
+      <member id="99ef3"/>
+      <member id="bd0ab"/>
     </group>
   </buttonGroups>
   <inspectionSuppressions>
