--- a/modules/gateway/reporting/src/main/resources/com/l7tech/gateway/standardreports/PS_IntervalMasterReport_Template.jrxml
+++ b/modules/gateway/reporting/src/main/resources/com/l7tech/gateway/standardreports/PS_IntervalMasterReport_Template.jrxml
@@ -58,9 +58,6 @@
     <parameter name="SERVICE_ID_TO_OPERATIONS_MAP" isForPrompting="false" class="java.util.Map">
         <defaultValueExpression><![CDATA[new HashMap()]]></defaultValueExpression>
     </parameter>
-    <parameter name="HOURLY_MAX_RETENTION_NUM_DAYS" isForPrompting="false" class="java.lang.Integer">
-        <defaultValueExpression><![CDATA[new Integer(1)]]></defaultValueExpression>
-    </parameter>
     <parameter name="KEYS_TO_LIST_FILTER_PAIRS" isForPrompting="false" class="java.util.LinkedHashMap"/>
     <parameter name="IS_DETAIL" isForPrompting="false" class="java.lang.Boolean">
         <defaultValueExpression><![CDATA[new Boolean(false)]]></defaultValueExpression>
@@ -102,7 +99,7 @@
     </parameter>
     <parameter name="resolution" isForPrompting="false" class="java.lang.Integer">
         <defaultValueExpression>
-            <![CDATA[Utilities.getIntervalResolutionFromTimePeriod($P{INTERVAL_TIME_UNIT}, $P{HOURLY_MAX_RETENTION_NUM_DAYS}, $P{startTimeMilli}, $P{endTimeMilli} )]]></defaultValueExpression>
+            <![CDATA[Utilities.getIntervalResolutionFromTimePeriod($P{INTERVAL_TIME_UNIT}, $P{startTimeMilli}, $P{endTimeMilli}, $P{SPECIFIC_TIME_ZONE}, $P{IS_RELATIVE}, $P{RELATIVE_TIME_UNIT} )]]></defaultValueExpression>
     </parameter>
     <parameter name="intervalAsString" isForPrompting="false" class="java.lang.String">
         <defaultValueExpression>
