ug EM-750: fixed 'full URI in report' by turning off truncation of group keys and values from 'Capture of Idendity of Requestor' assertion by default. Truncation can now be turned on and configured for this data using newly added system properties. Removed 'DISPLAY_STRING_TO_MAPPING_GROUP' parameter from usage reports as not required.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31289 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/reporting/src/main/resources/com/l7tech/gateway/standardreports/PS_IntervalMasterReport_Template.jrxml
+++ b/modules/gateway/reporting/src/main/resources/com/l7tech/gateway/standardreports/PS_IntervalMasterReport_Template.jrxml
@@ -703,7 +703,7 @@ $F{MAPPING_VALUE_5}})):"1"]]></categoryExpression>
                         </textElement>
                         <textFieldExpression class="java.lang.String"><![CDATA[Utilities.getMappingValueDisplayString(
 $P{KEYS_TO_LIST_FILTER_PAIRS}, $F{AUTHENTICATED_USER}, new String[]{$F{MAPPING_VALUE_1}, $F{MAPPING_VALUE_2}, $F{MAPPING_VALUE_3}, $F{MAPPING_VALUE_4},
-$F{MAPPING_VALUE_5}}, true, "<b>Group values:</b> ", true, Utilities.MAPPING_KEY_MAX_SIZE, Utilities.USAGE_HEADING_VALUE_MAX_SIZE)+"<br>"]]></textFieldExpression>
+$F{MAPPING_VALUE_5}}, true, "<b>Group values:</b> ")+"<br>"]]></textFieldExpression>
                     </textField>
                 </frame>
             </band>
